--- a/AutoCraft 1.19/src/plugin.yml
+++ b/AutoCraft 1.19/src/plugin.yml
@@ -1,8 +1,8 @@
 name: AutoCraft
-version: BETA-5
+version: 1.0.0
 authors: [keksexception]
 main: de.raffi.autocraft.main.AutoCraft
-api-version: 1.14
+api-version: 1.13
 
 commands:
    autocraft:
